--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">My music</string>
+    <string name="close">close the drawer</string>
+    <string name="open">open the drawer</string>
 
 </resources>
